test: batch operation item command rejection should not block batch operation execution